made several changes to the classes and GUI