@@ -1,44 +1,56 @@
 package com.example.pizzaparty;
 
 import java.text.DecimalFormat;
-import java.util.List;
-import java.util.stream.Collectors;
+import java.util.ArrayList;
+import java.util.Arrays;
 
 public class Meatzza extends Pizza {
-    private static final DecimalFormat df = new DecimalFormat("#.##");
+    private static final DecimalFormat decimalFormat = new DecimalFormat("0.00");
 
     public Meatzza() {
-        toppings = List.of(Topping.SAUSAGE, Topping.PEPPERONI, Topping.BEEF, Topping.HAM);
-        sauce = Sauce.TOMATO;
+        this.toppings = new ArrayList<>(Arrays.asList(Topping.SAUSAGE,Topping.PEPPERONI,Topping.BEEF,Topping.HAM));
+        this.sauce = Sauce.TOMATO;
     }
 
     @Override
-    public double calculateSizePrice() {
-        return switch (this.size) {
-            case SMALL -> 16.99;
-            case MEDIUM -> 18.99;
-            default -> 20.99;
-        };
+    public double getSizePrice(){
+        if(this.size == Size.SMALL) {
+            return 16.99;
+        }
+        else if(this.size == Size.MEDIUM) {
+            return 18.99;
+        }
+        else{
+            return 20.99;
+        }
     }
 
     @Override
-    public double calculatePrice() {
-        return Double.parseDouble(df.format(calculateSizePrice() + calculateCheesePrice() + calculateSaucePrice()));
+    public double price(){
+        return Double.parseDouble(decimalFormat.format(getSizePrice() + extraCheeseAmount() + extraSauceAmount()));
     }
 
     @Override
-    public String listToppings() {
-        return toppings.stream().map(Topping::toString).collect(Collectors.joining(", "));
+    public String getToppingsAsString(){
+        String toppingsAsString = "";
+        for(int i = 0; i < this.toppings.size(); i ++){
+            if(i == this.toppings.size()-1) {
+                toppingsAsString += this.toppings.get(i).toString();
+            }
+            else {
+                toppingsAsString += this.toppings.get(i).toString() + ", ";
+            }
+        }
+        return toppingsAsString;
     }
 
     @Override
-    public List<Topping> getToppings() {
+    public ArrayList<Topping> getToppings(){
         return this.toppings;
     }
 
     @Override
-    public String toString() {
-        return String.format("[Meatzza][%s][%s]: %s%s%s: $%.2f",
-                getSizeAsString(), getSauceAsString(), listToppings(), extraCheeseString(), extraSauceString(), calculatePrice());
+    public String toString(){
+        return "[Meatzza]" + "[" + getSizeAsString() + "]" + "[" + getSauceAsString() + "]: " + getToppingsAsString() + extraCheeseString() + extraSauceString() + ": " + "$" + price();
     }
 }
